# meson-cython-long-paths-windows

./: README.md  meson.build
package/: meson.build
package/metrics/: meson.build  working.pyx
package/metrics/_pairwise_distances_reduction/: meson.build
